@@ -1,4 +1,5 @@
 0.6.3:
+  - Support for CAPTCHA challenge handling.
 
 0.6.2:
   - Requiring Savon as "~>" now.
